testsuite/tests/properties/can_reach/invalid/bad_return_type.lkt
import common

@abstract class FooNode implements Node[FooNode] {
    fun can_reach(n: FooNode): FooNode = n
}
